--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.addressables": "1.22.3",
     "com.unity.editorcoroutines": "1.0.0",
     "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.memoryprofiler": "1.1.4",
     "com.unity.services.ccd.management": "2.2.2",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
